--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,10 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+## UC San Diego
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+### BIMM 100: Molecular Biology
+Teaching Assistant, Spring 2022
+
+### BIBC 102: Metabolic Biochemistry
+Teaching Assistant, Fall 2021
